--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "maatwebsite/excel": "^3.1",
+        "spatie/laravel-activitylog": "^4.7",
         "yajra/laravel-datatables": "9.0"
     },
     "require-dev": {
