--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^4.2",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-activitylog": "^4.7",
+        "spatie/laravel-backup": "^8.2",
         "yajra/laravel-datatables": "9.0"
     },
     "require-dev": {
